# invariant-core

./: AGENTS.md  README.md  pyproject.toml
.cursor/commands/: release-invariant-core.md
.github/workflows/: release.yml
docs/: architecture.md  async-executor.md  executor.md  expressions.md  serialization.md  subgraphs.md
examples/: README.md  commutative_canonicalization.py  polynomial_distributive.py
examples/serialized/: commutative_canonicalization.json  polynomial_distributive.json  yaml_authoring_example.yaml
src/invariant/: __init__.py  __main__.py  async_executor.py  cli.py  executor.py  graph.py  graph_serialization.py  invocation.py  node.py  registry.py  scheduler.py  traits.py  yaml_serialization.py
src/invariant/ops/: __init__.py  stdlib.py
src/invariant/store/: disk.py
tests/: process_ops.py  test_async_executor.py  test_cli.py  test_e2e_commutative.py  test_e2e_context.py  test_e2e_make_dict_list.py  test_e2e_polynomial.py  test_examples.py  test_executor.py  test_executor_subgraph.py  test_executor_switch.py  test_graph_serialization.py  test_ops_stdlib.py  test_registry.py  test_scheduler.py  test_store_disk.py  test_store_null.py  test_yaml_serialization.py
