[project]
name = "invariant-core"
version = "0.4.0.dev0"
description = "A Python-based deterministic execution engine for DAGs. Treats every operation as a pure function with aggressive caching, deduplication, and bit-for-bit reproducibility."
authors = [
    {name = "Kaj Siebert",email = "kaj@k-si.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
keywords = ["dag", "execution", "caching", "deterministic", "reproducible", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "cachetools>=5.3.0",
    "cel-python (>=0.5.0,<0.6.0)",
    "diskcache>=5.6.3,<6.0.0",
]

[project.urls]
Homepage = "https://github.com/kws/invariant"
Repository = "https://github.com/kws/invariant"
"Bug Tracker" = "https://github.com/kws/invariant/issues"

[project.entry-points."invariant.ops"]
poly = "invariant.ops.poly:OPS"
stdlib = "invariant.ops.stdlib:OPS"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/invariant"]

[dependency-groups]
dev = [
    "cachetools>=5.3.0",
    "diskcache>=5.6.3,<6.0.0",
    "ruff>=0.15.1",
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "pre-commit>=3.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
